# gambit-demo

./: Cargo.toml  README.md  mkdocs.yml  pyproject.toml
benches/: benchmarks.rs
docs/: changelog.md  configuration.md  contributing.md  getting-started.md  index.md
src/: lib.rs
tests/: test_module.py
