[build-system]
# maturin is the standard build backend for Rust/Python extension modules (PyO3).
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "gambit_demo"
version = "0.1.0"
description = "palantir demo for build-to-apply"
readme = "README.md"
authors = [{ name = "Aaron Berkhof" }]
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/Aaron Berkhof/gambit_demo"
Repository = "https://github.com/Aaron Berkhof/gambit_demo"
Documentation = "https://Aaron Berkhof.github.io/gambit_demo"

[tool.maturin]
# Uncomment if your Python source lives in a python/ subdirectory.
# python-source = "python"

# pyo3/extension-module is required when building a .so / .pyd extension.
# Remove this line if you are building a standalone binary wheel instead.
features = ["pyo3/extension-module"]

[dependency-groups]
docs = [
    "black>=23.10.0",
    # Pin below 2.0 — MkDocs 2.0 removes the plugin system and breaks all themes.
    "mkdocs>=1.5.0,<2.0",
    "mkdocs-material>=9.1.18",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-llmstxt>=0.2.0",
    "mdformat>=0.7.17",
    # mdformat-mkdocs>=2.0 includes admonition support — do not also install
    # mdformat-admon, they register conflicting renderers for the same nodes.
    "mdformat-mkdocs>=2.0.4",
]
dev = [
    { include-group = "docs" },
    "pytest>=8",
    "maturin>=1,<2",
    "pre-commit>=4",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
